-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Sharding
-
Fully Compatible
-
ALL
-
Sharding 2021-02-22
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The goal of this ticket is to fix 3 minor issues introduced when working on SERVER-53104:
- Do not assume that after an update metadata format task we will always have a common task that updates some chunks. This is only true if the Chunks we got from the Config Server are more recent than the ones we have locally.
- I found another minor bug when we compute the enqueued metadata CollAndChangedChunks: at this point we shouldn't set the flag to false but propagate whatever value we have in task.updateMetadataFormat.
- Finally, when we are patching-up (i.e. adding/removing the timestamp) the results that are going to be sent back to the CatalogCache, we need to first update the Collection Info and then patch-up the ChangedChunks, but we are doing it the other way around.