SERVER-54566 Fixing the CatalogCacheLoader behavior when handling an update metadata format task

It fixes 3 things:
- Do not assume that after an update metadata format task there is
  always a common task that updates some chunks.
- Minor bug computing the flag that specifies whether the results that
  are sent back to the CatalogCache must be patched-up.
- Minor bug patching-up the results that are sent back.